--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <div class="bar"></div>
     </div>
     <label class="label checkmark_label"> Recent MI
-        <input  id=recent_mi class="label__checkbox euroscore" type="checkbox"  data-euroscoreWeight="2"  />
+        <input  id=recent_mi class="label__checkbox euroscore" type="checkbox"  data-euroscoreWeight="2" disabled />
         <span class="label__text">
 	  <span class="label__check">
 		<i class="fa fa-check icon"></i>
