--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- Checkmark -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/checkmark.css"/>
+    <script src="https://unpkg.com/docx@4.0.0/build/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
 
 
 
@@ -638,11 +640,32 @@
     </div>
 </div>
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+<button type="button" onclick="generate()">Click to generate document</button>
+<script>
+    function generate() {
+        // https://github.com/dolanmiu/docx/blob/401ef73/src/file/table/table.ts#L68
+        const doc = new Document();
+
+        //table = table.setFixedWidthLayout();
+        const table = new Table(1, 2, [4000, 1200]);
+        table.getCell(0, 1).addContent(new Paragraph('h3'));
+        table.getCell(0, 1).setWidth(0.75, WidthType.Percentage);
+        table.getCell(1, 1).setWidth(0.25, WidthType.Percentage);
+
+        doc.addTable(table);
+
+        //const table2 = doc.createTable(3, 3, colSizes=[5, 1, 1]);
+        //table2.getCell(2, 2).addContent(new Paragraph('Hello2'));
+
+        const packer = new Packer();
+
+        packer.toBlob(doc).then(blob => {
+            console.log(blob);
+            saveAs(blob, "example.docx");
+            console.log("Document created successfully");
+        });
+    }
+</script>
+
 </body>
 </html>
