dyslipidemia to multi

--- a/index.html
+++ b/index.html
@@ -145,11 +145,24 @@
                 </span>
             </span>
         </label>
-        <div class="group">
-            <input class="textl" type="text" id="dyslipidemia" required="required" />
-            <label class="textl" for="dyslipidemia">Dyslipidemia</label>
-            <div class="bar"></div>
-        </div>
+        <form class="radio-form cf">
+            <section id="section-Dyslipidemia" class="plan cf">
+                <h2>Dyslipidemia</h2>
+                <input class="MyRadioInput " type="radio" name="dyslipidemia" id="dyslipidemiai" value="i"><label class="six col"
+                    for="dyslipidemiai">I</label>
+                <input class="MyRadioInput " type="radio" name="dyslipidemia" id="dyslipidemiaiia" value="iia"><label
+                    class="six col" for="dyslipidemiaiia">IIa</label>
+                <input class="MyRadioInput " type="radio" name="dyslipidemia" id="dyslipidemiaiib" value="iib"><label
+                    class="six col" for="dyslipidemiaiib">IIb</label>
+                <input class="MyRadioInput " type="radio" name="dyslipidemia" id="dyslipidemiaiii" value="iii"><label
+                    class="six col" for="dyslipidemiaiii">III</label>
+                <input class="MyRadioInput " type="radio" name="dyslipidemia" id="dyslipidemiaiv" value="iv"><label
+                    class="six col" for="dyslipidemiaiv">IV</label>
+                <input class="MyRadioInput " type="radio" name="dyslipidemia" id="dyslipidemiav" value="v"><label class="six col"
+                    for="dyslipidemiav">V</label>
+
+            </section>
+        </form>
         <form class="radio-form cf">
             <section id="section-Diabetes mellitus" class="plan cf">
                 <h2>Diabetes mellitus</h2>
