NYI warning on log-euroscore

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
             <div class="bar"></div>
         </div>
         <div class="group">
-            <input class="textl " type="text" id="logeuroscore" value="Autocalc" disabled>
+            <input class="textl " type="text" id="logeuroscore" value="Not Yet Implemented" disabled>
             <label class="textl" for="logeuroscore">Log-Euroscore</label>
             <div class="bar"></div>
         </div>
